--- a/indexHome.html
+++ b/indexHome.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="navFirstPage">
+    <div id="navHome">
         <a href="#home">Home</a>
         <a href="#aboutUs">About Us</a>
         <a href="#projects">Projects</a>
@@ -35,6 +35,16 @@
             quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
             magni? Voluptatibus inventore error laudantium.</p>
     </section>
+    <footer>
+        <h4>Socials</h4>
+        <ul>
+            <li><a>Instagram</a></li>
+            <li><a>Twitter</a></li>
+            <li><a>Snapchat</a></li>
+            <li><a>Linkedin/a></li>
+        </ul>
+        <img src="" alt="Sea Advocates Brand Logo">
+    </footer>
 </body>
 
 </html>
