--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="navFirstPage">
         <a href="#home">Home</a>
-        <a href="#aboutUs">About Us</a>
+        <a href="aboutUs.html">About Us</a>
         <a href="#projects">Projects</a>
         <a href="#awards">Awards</a>
         <a href="#joinTheTeam">Join The Team</a>
