Amber's HTML commits

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>343 Project About Us Page</title>
 </head>
 
 <body>
-    <div id="navFirstPage">
+    <div id="navAboutUs">
         <a href="#home">Home</a>
         <a href="aboutUs.html">About Us</a>
         <a href="#projects">Projects</a>
         <a href="#awards">Awards</a>
         <a href="#joinTheTeam">Join The Team</a>
     </div>
+    <img src="" alt="Image of team holding arms.">
 
     <section>
         <h2>Mission</h2>
@@ -69,6 +70,16 @@
                 quibusdam pariatur expedita libero sequi!</li>
         </ul>
     </section>
+    <footer>
+        <h4>Socials</h4>
+        <ul>
+            <li><a>Instagram</a></li>
+            <li><a>Twitter</a></li>
+            <li><a>Snapchat</a></li>
+            <li><a>Linkedin/a></li>
+        </ul>
+        <img src="" alt="Sea Advocates Brand Logo">
+    </footer>
 </body>
 
 </html>
