--- a/indexHome.html
+++ b/indexHome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>343 Project 1</title>
+    <title>343 Project Home Page</title>
 </head>
 
 <body>
@@ -17,10 +17,10 @@
         <a href="#joinTheTeam">Join The Team</a>
     </div>
 
-    <section>
+    <header>
         <h1>Sea Advocates</h1>
         <img src="" alt="">
-    </section>
+    </header>
 
     <h2>Lorem Ipsum</h2>
     <section>
