--- a/aboutUs.html
+++ b/aboutUs.html
@@ -14,7 +14,7 @@
         <a href="aboutUs.html">About Us</a>
         <a href="#projects">Projects</a>
         <a href="#awards">Awards</a>
-        <a href="#joinTheTeam">Join The Team</a>
+        <a href="join.html">Join The Team</a>
     </div>
 
     <section>
