--- a/indexAwards.html
+++ b/indexAwards.html
@@ -10,11 +10,11 @@
 
 <body>
     <div id="navHome">
-        <a href="#home">Home</a>
-        <a href="#aboutUs">About Us</a>
-        <a href="#projects">Projects</a>
-        <a href="#awards">Awards</a>
-        <a href="#joinTheTeam">Join The Team</a>
+        <a href="indexHome.html">Home</a>
+        <a href="aboutUs.html">About Us</a>
+        <a href="indexProject.html">Projects</a>
+        <a href="indexAwards.html">Awards</a>
+        <a href="join.html">Join The Team</a>
     </div>
 
     <section>
