--- a/join.html
+++ b/join.html
@@ -10,10 +10,10 @@
 
 <body>
     <div id="navFirstPage">
-        <a href="#home">Home</a>
+        <a href="indexHome.html">Home</a>
         <a href="aboutUs.html">About Us</a>
-        <a href="#projects">Projects</a>
-        <a href="#awards">Awards</a>
+        <a href="indexProject.html">Projects</a>
+        <a href="indexAwards.html">Awards</a>
         <a href="join.html">Join The Team</a>
     </div>
 
