changed indexHome.html to index.html for a proper home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="navHome">
-        <a href="indexHome.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutUs.html">About Us</a>
         <a href="indexProject.html">Projects</a>
         <a href="indexAwards.html">Awards</a>
