--- a/indexProject.html
+++ b/indexProject.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="navProjects">
-        <a href="indexHome.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutUs.html">About Us</a>
         <a href="indexProject.html">Projects</a>
         <a href="indexAwards.html">Awards</a>
