--- a/join.html
+++ b/join.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join the Team</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
@@ -29,6 +30,8 @@
     <input type="text" id="email" name="eamil"><br>
     <label for="emailconf">Email (Confirm):</label><br>
     <input type="text" id="emailconf" name="emailconf"><br>
+
+    <input type="submit" value="Sign Up">
 </form>
 
 </body>
