--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>343 Project Home Page</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
@@ -43,7 +44,7 @@
             <li><a>Snapchat</a></li>
             <li><a>Linkedin/a></li>
         </ul>
-        <img src="" alt="Sea Advocates Brand Logo">
+        <img src="pictures/beachClean.jpg" alt="Sea Advocates Brand Logo">
     </footer>
 </body>
 
