--- a/awards.html
+++ b/awards.html
@@ -13,8 +13,8 @@
     <div id="navHome">
         <a href="index.html">Home</a>
         <a href="aboutUs.html">About Us</a>
-        <a href="indexProject.html">Projects</a>
-        <a href="indexAwards.html">Awards</a>
+        <a href="project.html">Projects</a>
+        <a href="awards.html">Awards</a>
         <a href="join.html">Join The Team</a>
     </div>
 
@@ -53,14 +53,14 @@
     </section>
 
     <footer>
-        <h4>Socials</h4>
+        <!-- <h4>Socials</h4> -->
         <ul>
-            <li><a>Instagram</a></li>
-            <li><a>Twitter</a></li>
-            <li><a>Snapchat</a></li>
-            <li><a>Linkedin/a></li>
+            <li><a><img src="./pictures/icons/instagram.png" alt="Instagram"></a></li>
+            <li><a><img src="./pictures/icons/twitter.png" alt="Twitter"></a></li>
+            <li><a><img src="./pictures/icons/snapchat.png" alt="Snapchat"></a></li>
+            <li><a><img src="./pictures/icons/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
-        <img src="" alt="Sea Advocates Brand Logo">
+        <div id="logo"><img src="./pictures/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
 </body>
 
