--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>343 Project Home Page</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="navHome">
         <a href="index.html">Home</a>
         <a href="aboutUs.html">About Us</a>
-        <a href="indexProject.html">Projects</a>
-        <a href="indexAwards.html">Awards</a>
+        <a href="project.html">Projects</a>
+        <a href="awards.html">Awards</a>
         <a href="join.html">Join The Team</a>
     </div>
 
     <header>
         <h1>Sea Advocates</h1>
-        <img src="" alt="">
+        <img src="pictures/beachView.jpg" alt="Banner picture of the beach">
     </header>
 
     <h2>Lorem Ipsum</h2>
