--- a/project.html
+++ b/project.html
@@ -14,8 +14,8 @@
     <div id="navProjects">
         <a href="index.html">Home</a>
         <a href="aboutUs.html">About Us</a>
-        <a href="indexProject.html">Projects</a>
-        <a href="indexAwards.html">Awards</a>
+        <a href="project.html">Projects</a>
+        <a href="awards.html">Awards</a>
         <a href="join.html">Join The Team</a>
     </div>
 
