--- a/join.html
+++ b/join.html
@@ -6,32 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join the Team</title>
+    <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
-    <div id="navFirstPage">
-        <a href="index.html">Home</a>
-        <a href="aboutUs.html">About Us</a>
-        <a href="project.html">Projects</a>
-        <a href="awards.html">Awards</a>
-        <a href="join.html">Join The Team</a>
-    </div>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Sea Advocates</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="aboutUs.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="project.html">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="awards.html">Awards</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="join.html">Join</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
 <h2>Join the Team</h2>
 <form>
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname"><br>
-    <label for="phone">Phone Number:</label><br>
-    <input type="text" id="phone" name="phone"><br>
-    <label for="email">Email:</label><br>
-    <input type="text" id="email" name="eamil"><br>
-    <label for="emailconf">Email (Confirm):</label><br>
-    <input type="text" id="emailconf" name="emailconf"><br>
-
-    <input type="submit" value="Sign Up">
-</form>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  
+<footer>
+    <!-- <h4>Socials</h4> -->
+    <ul>
+        <li><a><img src="./pictures/icons/instagram.png" alt="Instagram"></a></li>
+        <li><a><img src="./pictures/icons/twitter.png" alt="Twitter"></a></li>
+        <li><a><img src="./pictures/icons/snapchat.png" alt="Snapchat"></a></li>
+        <li><a><img src="./pictures/icons/linkedin.png" alt="LinkedIn"></a></li>
+    </ul>
+    <div id="logo"><img src="./pictures/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </body>
