fixed directory organization

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css"> 
+    <!-- <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 
 <body class = "aboutUs">
@@ -37,67 +37,67 @@
       </nav>
 
     <section class = "aboutUs">
-        <h2>Mission</h2>
-        <ul class = "list-group">
-            <li class = "list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere doloribus dolorem adipisci ipsa impedit
+        <h2 class = "aboutUs">Mission</h2>
+        <ul class = "aboutUs">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere doloribus dolorem adipisci ipsa impedit
                 aliquid nisi, soluta perspiciatis labore sequi nemo atque illo reprehenderit laudantium est animi
                 maiores odit. Hic.</li>
-            <li class = "list-group-item">Consequuntur ab rem quasi? Tenetur voluptates vel corporis nihil a quos ut quasi voluptatum sunt odit
+            <li>Consequuntur ab rem quasi? Tenetur voluptates vel corporis nihil a quos ut quasi voluptatum sunt odit
                 sed maiores non reprehenderit asperiores minima, ipsa atque neque totam? Esse nisi qui quia.</li>
-            <li class = "list-group-item">Aliquid quam nam, veritatis error eos quibusdam, delectus doloribus molestias impedit, dignissimos
+            <li>Aliquid quam nam, veritatis error eos quibusdam, delectus doloribus molestias impedit, dignissimos
                 incidunt praesentium labore architecto corrupti tenetur voluptas repudiandae laboriosam! Laborum, ipsam
                 iste. Quasi facilis eligendi tenetur aspernatur ullam?</li>
-            <li class = "list-group-item">Recusandae odit eius eligendi necessitatibus quis ut. Quos similique quis quasi est beatae? Vero ad,
+            <li>Recusandae odit eius eligendi necessitatibus quis ut. Quos similique quis quasi est beatae? Vero ad,
                 quae, cum vel voluptas ipsam nam molestiae sed rem optio ducimus! Odit maiores reprehenderit laudantium?
             </li>
         </ul>
     </section>
 
     <section class = "aboutUs">
-        <h2>Core Values</h2>
-        <ul class = "list-group">
-            <li class = "list-group-item">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum recusandae incidunt eum iste ea, doloribus
+        <h2 class = "aboutUs" id = "coreValues">Core Values</h2>
+        <ul class = "aboutUs" id = "coreValues">
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum recusandae incidunt eum iste ea, doloribus
                 mollitia vero voluptates qui eaque explicabo a animi molestias, dolorum, quis quia rerum voluptas
                 excepturi.</li>
-            <li class = "list-group-item">Deserunt ipsam, alias facere iste blanditiis repudiandae, enim cupiditate, voluptate voluptatum veniam
+            <li>Deserunt ipsam, alias facere iste blanditiis repudiandae, enim cupiditate, voluptate voluptatum veniam
                 quidem culpa vero sapiente eius harum? Nihil dignissimos fugit mollitia recusandae asperiores natus
                 eligendi, odio saepe quos officiis!</li>
-            <li class = "list-group-item">Sunt ut alias deleniti atque eaque praesentium sapiente neque veniam ipsum! Dignissimos repellat sint
+            <li>Sunt ut alias deleniti atque eaque praesentium sapiente neque veniam ipsum! Dignissimos repellat sint
                 officia eos ipsum eius, deserunt, libero omnis ex dicta laboriosam, ut eveniet! Odit dolor amet non.
             </li>
-            <li class = "list-group-item">Reprehenderit praesentium hic qui, ducimus vel animi fugiat vero magnam alias aut unde omnis corrupti
+            <li>Reprehenderit praesentium hic qui, ducimus vel animi fugiat vero magnam alias aut unde omnis corrupti
                 dignissimos iste ratione accusamus, repellat nulla dolor error suscipit commodi debitis? Voluptatem
                 minus delectus natus?</li>
         </ul>
     </section>
 
     <section class = "aboutUs">
-        <h2>The Team</h2>
-        <ul class = "list-group">
-            <li class = "list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quaerat velit adipisci quo ducimus,
+        <h2 class = "aboutUs">The Team</h2>
+        <ul class = "aboutUs">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quaerat velit adipisci quo ducimus,
                 sint ipsam nobis aspernatur, eligendi, quisquam beatae neque cum sed sequi rem ut quasi? Qui, laborum.
             </li>
-            <li class = "list-group-item">Vero facilis fugit fugiat perferendis, eaque sapiente qui iusto excepturi, voluptate atque similique
+            <li>Vero facilis fugit fugiat perferendis, eaque sapiente qui iusto excepturi, voluptate atque similique
                 doloremque porro ea non? Iure doloribus delectus nemo sunt pariatur optio excepturi consequatur. Cumque
                 natus minus reprehenderit.</li>
-            <li class = "list-group-item">Quibusdam molestias qui rem excepturi similique esse provident quo asperiores quidem nemo assumenda
+            <li>Quibusdam molestias qui rem excepturi similique esse provident quo asperiores quidem nemo assumenda
                 accusantium mollitia atque amet, maxime magnam, doloremque sint consequatur, ratione ducimus? Beatae quo
                 atque quidem dicta unde.</li>
-            <li class = "list-group-item">Eos esse nisi, veritatis incidunt ipsam voluptatum. Placeat et quaerat repudiandae cum nesciunt
+            <li>Eos esse nisi, veritatis incidunt ipsam voluptatum. Placeat et quaerat repudiandae cum nesciunt
                 assumenda accusantium nobis. Doloremque rem quod, cumque ipsa maxime consequuntur tempora totam
                 quibusdam pariatur expedita libero sequi!</li>
         </ul>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
     <footer>
         <!-- <h4>Socials</h4> -->
         <ul>
-            <li><a><img src="./pictures/icons/instagram.png" alt="Instagram"></a></li>
-            <li><a><img src="./pictures/icons/twitter.png" alt="Twitter"></a></li>
-            <li><a><img src="./pictures/icons/snapchat.png" alt="Snapchat"></a></li>
-            <li><a><img src="./pictures/icons/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+            <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+            <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+            <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
-        <div id="logo"><img src="./pictures/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
+        <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
 </body>
 
