--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 
     <header>
         <h1>Sea Advocates</h1>
-        <img src="pictures/beachView.jpg" alt="Banner picture of the beach">
+        <img src="images/beachView.jpg" alt="Banner picture of the beach">
     </header>
 
     <h2>Lorem Ipsum</h2>
@@ -59,12 +59,12 @@
     <footer>
         <!-- <h4>Socials</h4> -->
         <ul>
-            <li><a><img src="./pictures/icons/instagram.png" alt="Instagram"></a></li>
-            <li><a><img src="./pictures/icons/twitter.png" alt="Twitter"></a></li>
-            <li><a><img src="./pictures/icons/snapchat.png" alt="Snapchat"></a></li>
-            <li><a><img src="./pictures/icons/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+            <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+            <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+            <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
-        <div id="logo"><img src="./pictures/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
+        <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
