--- a/join.html
+++ b/join.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join the Team</title>
     <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 
 <body>
@@ -56,12 +56,12 @@
 <footer>
     <!-- <h4>Socials</h4> -->
     <ul>
-        <li><a><img src="./pictures/icons/instagram.png" alt="Instagram"></a></li>
-        <li><a><img src="./pictures/icons/twitter.png" alt="Twitter"></a></li>
-        <li><a><img src="./pictures/icons/snapchat.png" alt="Snapchat"></a></li>
-        <li><a><img src="./pictures/icons/linkedin.png" alt="LinkedIn"></a></li>
+        <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+        <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+        <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+        <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
     </ul>
-    <div id="logo"><img src="./pictures/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
+    <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
