--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,6 +8,8 @@
     <title>About</title>
     <!-- <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/aboutUs.css"> 
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
 <body>
@@ -36,6 +38,12 @@
         </div>
       </nav>
 
+      <!-- Image for the header -->
+      <header>
+        <img src="images/group.jpg" alt = "A picture of the backs of a group of people covered in paint.">
+      </header>
+    
+    <!-- The bulk of the text for this page -->
     <section class = "aboutUs">
         <h2 class = "aboutUs">Mission</h2>
         <ul class = "aboutUs">
