--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,30 +11,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Sea Advocates</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="aboutUs.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="project.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="awards.html">Awards</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="join.html">Join</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="awards.html">Awards</a></li>
+            <li><a href="join.html">Join</a></li>
+          </ul>
+    </nav>
 
     <section class = "aboutUs">
         <h2 class = "aboutUs">Mission</h2>
