--- a/awards.html
+++ b/awards.html
@@ -7,34 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>343 Project Awards Page</title>
     <link rel="stylesheet" href="css/style.css"> 
-    <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Sea Advocates</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="aboutUs.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="project.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="awards.html">Awards</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="join.html">Join</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutUs.html">About Us</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="awards.html">Awards</a></li>
+        <li><a href="join.html">Join</a></li>
+      </ul>
+  </nav>  
 
     <section>
         <h2>AWARDS & RECOGNITIONS</h2>
@@ -80,7 +64,6 @@
         </ul>
         <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
 </html>
