--- a/index.html
+++ b/index.html
@@ -6,82 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>343 Project Home Page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Sea Advocates</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="aboutUs.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="project.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="awards.html">Awards</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="join.html">Join</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutUs.html">About Us</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="awards.html">Awards</a></li>
+        <li><a href="join.html">Join</a></li>
+      </ul>
+  </nav>
 
-<<<<<<< HEAD
-    <header>
-        <h1>Sea Advocates</h1>
+    <header class="container">
         <img src="images/beachView.jpg" alt="Banner picture of the beach">
-=======
-    <header class="container-fluid px-0">
-        <img class="img-fluid" src="pictures/beachView.jpg" alt="Banner picture of the beach">
->>>>>>> 49c740eafb807b2afbdf59bb348edbcdfcfa7d27
+        <h1>SEA ADVOCATES</h1>
     </header>
 
-    <section class="container-fluid px-0">
-      <div class="row align-items-center">
-        <div class="col-md-6 text-center">
-          <div class="row justify-content-center">
-            <div class="col-10">
-              <h2>SEA ADVOCATES</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
-              reiciendis aliquid unde corporis, sint labore cum! Sunt quidem expedita eveniet sit esse, consequatur
-              deserunt sint?
-              Neque corporis maiores fugiat eos aliquam blanditiis id accusantium deleniti obcaecati eum officia veritatis
-              optio, excepturi et suscipit, fuga veniam commodi esse voluptas adipisci temporibus nobis. Incidunt
-              consequatur eveniet praesentium.
-              Deleniti architecto assumenda sit obcaecati nemo illo explicabo molestiae eveniet beatae quasi reiciendis
-              quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
-              magni? Voluptatibus inventore error laudantium.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 text-center">
-          <div class="row justify-content-center">
-            <div class="col-10">
-              <h2>SEA ADVOCATES</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
-              reiciendis aliquid unde corporis, sint labore cum! Sunt quidem expedita eveniet sit esse, consequatur
-              deserunt sint?
-              Neque corporis maiores fugiat eos aliquam blanditiis id accusantium deleniti obcaecati eum officia veritatis
-              optio, excepturi et suscipit, fuga veniam commodi esse voluptas adipisci temporibus nobis. Incidunt
-              consequatur eveniet praesentium.
-              Deleniti architecto assumenda sit obcaecati nemo illo explicabo molestiae eveniet beatae quasi reiciendis
-              quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
-              magni? Voluptatibus inventore error laudantium.</p>
-            </div>
-          </div>
-        </div>
+    <section class="row">
+      <div class="column">
+        <h2>SEA ADVOCATES</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
+        reiciendis aliquid unde corporis, sint labore cum! Sunt quidem expedita eveniet sit esse, consequatur
+        deserunt sint?
+        Neque corporis maiores fugiat eos aliquam blanditiis id accusantium deleniti obcaecati eum officia veritatis
+        optio, excepturi et suscipit, fuga veniam commodi esse voluptas adipisci temporibus nobis. Incidunt
+        consequatur eveniet praesentium.
+        Deleniti architecto assumenda sit obcaecati nemo illo explicabo molestiae eveniet beatae quasi reiciendis
+        quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
+        magni? Voluptatibus inventore error laudantium.</p>
+      </div>
+      <div class="column">      
+        <h2>SEA ADVOCATES</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
+        reiciendis aliquid unde corporis, sint labore cum! Sunt quidem expedita eveniet sit esse, consequatur
+        deserunt sint?
+        Neque corporis maiores fugiat eos aliquam blanditiis id accusantium deleniti obcaecati eum officia veritatis
+        optio, excepturi et suscipit, fuga veniam commodi esse voluptas adipisci temporibus nobis. Incidunt
+        consequatur eveniet praesentium.
+        Deleniti architecto assumenda sit obcaecati nemo illo explicabo molestiae eveniet beatae quasi reiciendis
+        quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
+        magni? Voluptatibus inventore error laudantium.</p>
       </div>
     </section>
 
@@ -95,10 +62,5 @@
         </ul>
         <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 </body>
-
 </html>
