awards page almost done, and font styles

--- a/awards.html
+++ b/awards.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>343 Project Awards Page</title>
+    <title>Awards - Sea Advocates</title>
     <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/awards.css"> 
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
 <body>
@@ -22,8 +24,8 @@
 
     <section>
         <h2>AWARDS & RECOGNITIONS</h2>
-        <div class="Awards card">
-            <img src="" alt="Award photo.">
+        <div class="awardsCard">
+            <img src="images/medal.jpg" alt="Award photo.">
             <h3><u>Lorem Ipsum Dolor Sit Amet</u></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In impedit magnam alias illo quos suscipit
                 fugiat repellendus dolorem, pariatur nemo illum nobis. Mollitia nam tempore aut laudantium corporis non
@@ -32,8 +34,8 @@
                 Mollitia distinctio corrupti eaque? Laudantium libero perferendis totam amet illum dignissimos deleniti
                 iure, dolor hic aspernatur aliquid atque?</p>
         </div>
-        <div class="Awards card">
-            <img src="" alt="Award photo.">
+        <img src="images/medal.jpg" alt="Award photo.">
+        <div class="awardsCard">
             <h3><u>Lorem Ipsum Dolor Sit Amet</u></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In impedit magnam alias illo quos suscipit
                 fugiat repellendus dolorem, pariatur nemo illum nobis. Mollitia nam tempore aut laudantium corporis non
@@ -42,8 +44,8 @@
                 Mollitia distinctio corrupti eaque? Laudantium libero perferendis totam amet illum dignissimos deleniti
                 iure, dolor hic aspernatur aliquid atque?</p>
         </div>
-        <div class="Awards card">
-            <img src="" alt="Award photo.">
+        <img src="images/medal.jpg" alt="Award photo.">
+        <div class="awardsCard">
             <h3><u>Lorem Ipsum Dolor Sit Amet</u></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In impedit magnam alias illo quos suscipit
                 fugiat repellendus dolorem, pariatur nemo illum nobis. Mollitia nam tempore aut laudantium corporis non
