--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <!-- <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+    <title>About - Sea Advocates</title>
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="css/aboutUs.css"> 
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
@@ -29,9 +28,9 @@
       </header>
     
     <!-- The bulk of the text for this page -->
-    <section class = "aboutUs">
-        <h2 class = "aboutUs">Mission</h2>
-        <ul class = "aboutUs">
+    <section>
+        <h2>Mission</h2>
+        <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere doloribus dolorem adipisci ipsa impedit
                 aliquid nisi, soluta perspiciatis labore sequi nemo atque illo reprehenderit laudantium est animi
                 maiores odit. Hic.</li>
@@ -46,9 +45,9 @@
         </ul>
     </section>
 
-    <section class = "aboutUs">
-        <h2 class = "aboutUs" id = "coreValues">Core Values</h2>
-        <ul class = "aboutUs" id = "coreValues">
+    <section>
+        <h2>Core Values</h2>
+        <ul>
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum recusandae incidunt eum iste ea, doloribus
                 mollitia vero voluptates qui eaque explicabo a animi molestias, dolorum, quis quia rerum voluptas
                 excepturi.</li>
@@ -64,9 +63,9 @@
         </ul>
     </section>
 
-    <section class = "aboutUs">
-        <h2 class = "aboutUs">The Team</h2>
-        <ul class = "aboutUs">
+    <section>
+        <h2>The Team</h2>
+        <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quaerat velit adipisci quo ducimus,
                 sint ipsam nobis aspernatur, eligendi, quisquam beatae neque cum sed sequi rem ut quasi? Qui, laborum.
             </li>
@@ -81,9 +80,8 @@
                 quibusdam pariatur expedita libero sequi!</li>
         </ul>
     </section>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
     <footer>
-        <!-- <h4>Socials</h4> -->
+        <!-- Socials -->
         <ul>
             <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
             <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
