almost done with project page

--- a/project.html
+++ b/project.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Projects - Sea Advocates</title>
     <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/project.css"> 
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
 <body>
@@ -22,7 +24,7 @@
   </nav>
 
     <section class="projectsSections">
-        <h2>UPCOMING PROJECTS</h2>
+        <h2>Upcoming Projects</h2>
         <div>
             <img src="" alt="Venice Beach photo.">
             <h3>Venice Beach Cleanup</h3>
@@ -54,6 +56,7 @@
                 tenetur inventore molestiae?</p>
         </div>
     </section>
+    <h2>Past Projects</h2>
     <section class="projectsSections">
         <div>
             <img src="" alt="Kaui Beach project photo.">
