--- a/project.html
+++ b/project.html
@@ -25,9 +25,9 @@
 
     <section class="projectsSections">
         <h2>Upcoming Projects</h2>
+        <img src="images/trashBag.jpg" alt="Venice Beach photo.">
         <div>
-            <img src="" alt="Venice Beach photo.">
-            <h3>Venice Beach Cleanup</h3>
+            <h3><a href="https://www.laparks.org/venice/">Venice Beach Cleanup</a></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque deserunt doloremque aliquid maxime
                 explicabo libero veniam dolor voluptatem, dolorum fuga numquam quasi! Repellendus earum laboriosam et.
                 Totam quo magnam cumque?
@@ -35,8 +35,8 @@
                 totam laborum at harum veniam porro distinctio? Quasi est quis quod laboriosam dicta ad repudiandae cum
                 tenetur inventore molestiae?</p>
         </div>
+        <img src="images/trashGirl.jpg" alt="Laguna Beach photo.">
         <div>
-            <img src="" alt="Laguna Beach photo.">
             <h3>Laguna Beach Cleanup</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque deserunt doloremque aliquid maxime
                 explicabo libero veniam dolor voluptatem, dolorum fuga numquam quasi! Repellendus earum laboriosam et.
@@ -45,8 +45,8 @@
                 totam laborum at harum veniam porro distinctio? Quasi est quis quod laboriosam dicta ad repudiandae cum
                 tenetur inventore molestiae?</p>
         </div>
+        <img src="images/beachView.jpg" alt="Ocean city photo.">
         <div>
-            <img src="" alt="Ocean city photo.">
             <h3>Ocean City Beach Cleanup</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque deserunt doloremque aliquid maxime
                 explicabo libero veniam dolor voluptatem, dolorum fuga numquam quasi! Repellendus earum laboriosam et.
@@ -58,8 +58,8 @@
     </section>
     <h2>Past Projects</h2>
     <section class="projectsSections">
+        <img src="images/beachView.jpg" alt="Kaui Beach project photo.">
         <div>
-            <img src="" alt="Kaui Beach project photo.">
             <h3>Kaui Beach Cleanup</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque deserunt doloremque aliquid maxime
                 explicabo libero veniam dolor voluptatem, dolorum fuga numquam quasi! Repellendus earum laboriosam et.
@@ -68,8 +68,8 @@
                 totam laborum at harum veniam porro distinctio? Quasi est quis quod laboriosam dicta ad repudiandae cum
                 tenetur inventore molestiae?</p>
         </div>
+        <img src="images/beachClean.jpg" alt="Clearwater Beach project photo.">
         <div>
-            <img src="" alt="Clearwater Beach project photo.">
             <h3>Clearwater Beach Cleanup</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque deserunt doloremque aliquid maxime
                 explicabo libero veniam dolor voluptatem, dolorum fuga numquam quasi! Repellendus earum laboriosam et.
@@ -78,8 +78,8 @@
                 totam laborum at harum veniam porro distinctio? Quasi est quis quod laboriosam dicta ad repudiandae cum
                 tenetur inventore molestiae?</p>
         </div>
+        <img src="images/sunset.jpg" alt="Oahu city project photo.">
         <div>
-            <img src="" alt="Oahu city project photo.">
             <h3>Oahu City Beach Cleanup</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque deserunt doloremque aliquid maxime
                 explicabo libero veniam dolor voluptatem, dolorum fuga numquam quasi! Repellendus earum laboriosam et.
@@ -90,9 +90,8 @@
         </div>
     </section>
     <footer>
-        <!-- <h4>Socials</h4> -->
         <ul>
-            <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://www.instagram.com"><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
             <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
             <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
             <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
