--- a/awards.html
+++ b/awards.html
@@ -26,7 +26,7 @@
         <h2>AWARDS & RECOGNITIONS</h2>
         <div class="awardsCard">
             <img src="images/medal.jpg" alt="Award photo.">
-            <h3><u>Lorem Ipsum Dolor Sit Amet</u></h3>
+            <h3>Lorem Ipsum Dolor Sit Amet</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In impedit magnam alias illo quos suscipit
                 fugiat repellendus dolorem, pariatur nemo illum nobis. Mollitia nam tempore aut laudantium corporis non
                 facere.
@@ -36,7 +36,7 @@
         </div>
         <div class="awardsCard">
             <img src="images/medal.jpg" alt="Award photo.">
-            <h3><u>Lorem Ipsum Dolor Sit Amet</u></h3>
+            <h3>Lorem Ipsum Dolor Sit Amet</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In impedit magnam alias illo quos suscipit
                 fugiat repellendus dolorem, pariatur nemo illum nobis. Mollitia nam tempore aut laudantium corporis non
                 facere.
@@ -46,7 +46,7 @@
         </div>
         <div class="awardsCard">
             <img src="images/medal.jpg" alt="Award photo.">
-            <h3><u>Lorem Ipsum Dolor Sit Amet</u></h3>
+            <h3>Lorem Ipsum Dolor Sit Amet</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In impedit magnam alias illo quos suscipit
                 fugiat repellendus dolorem, pariatur nemo illum nobis. Mollitia nam tempore aut laudantium corporis non
                 facere.
@@ -57,7 +57,6 @@
     </section>
 
     <footer>
-        <!-- <h4>Socials</h4> -->
         <ul>
             <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
             <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
