final, fingers crossed

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Sea Advocates</title>
-    <link rel="stylesheet" href="css/style.css"> 
-    <link rel="stylesheet" href="css/aboutUs.css"> 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about.css">
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
@@ -15,18 +15,18 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="aboutUs.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="project.html">Projects</a></li>
             <li><a href="awards.html">Awards</a></li>
             <li><a href="join.html">Join</a></li>
-          </ul>
+        </ul>
     </nav>
 
-      <!-- Image for the header -->
-      <header>
-        <img src="images/group.jpg" alt = "A picture of the backs of a group of people covered in paint.">
-      </header>
-    
+    <!-- Image for the header -->
+    <header>
+        <img src="images/group.jpg" alt="A picture of the backs of a group of people covered in paint.">
+    </header>
+
     <!-- The bulk of the text for this page -->
     <section>
         <h2>Mission</h2>
@@ -83,10 +83,10 @@
     <footer>
         <!-- Socials -->
         <ul>
-            <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
-            <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
-            <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
-            <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://www.instagram.com/"><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://twitter.com/"><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+            <li><a href="https://www.snapchat.com/"><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+            <li><a href="https://www.linkedin.com/"><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
         <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
