--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Sea Advocates</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Sea Advocates</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
 <body>
   <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutUs.html">About Us</a></li>
-        <li><a href="project.html">Projects</a></li>
-        <li><a href="awards.html">Awards</a></li>
-        <li><a href="join.html">Join</a></li>
-      </ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="awards.html">Awards</a></li>
+      <li><a href="join.html">Join</a></li>
+    </ul>
   </nav>
 
-    <header class="container">
-        <img src="images/beachView.jpg" alt="Banner picture of the beach">
-        <h1>SEA ADVOCATES</h1>
-    </header>
+  <header class="container">
+    <img src="images/beachView.jpg" alt="Banner picture of the beach">
+    <h1>SEA ADVOCATES</h1>
+  </header>
 
-    <section class="row">
-      <div class="column">
-        <h2>SEA ADVOCATES</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
+  <section class="row">
+    <div class="column">
+      <h2>SEA ADVOCATES</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
         reiciendis aliquid unde corporis, sint labore cum! Sunt quidem expedita eveniet sit esse, consequatur
         deserunt sint?
         Neque corporis maiores fugiat eos aliquam blanditiis id accusantium deleniti obcaecati eum officia veritatis
@@ -38,10 +38,10 @@
         Deleniti architecto assumenda sit obcaecati nemo illo explicabo molestiae eveniet beatae quasi reiciendis
         quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
         magni? Voluptatibus inventore error laudantium.</p>
-      </div>
-      <div class="column">      
-        <h2>SEA ADVOCATES</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
+    </div>
+    <div class="column">
+      <h2>SEA ADVOCATES</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis rerum laborum laboriosam repellat est
         reiciendis aliquid unde corporis, sint labore cum! Sunt quidem expedita eveniet sit esse, consequatur
         deserunt sint?
         Neque corporis maiores fugiat eos aliquam blanditiis id accusantium deleniti obcaecati eum officia veritatis
@@ -50,18 +50,19 @@
         Deleniti architecto assumenda sit obcaecati nemo illo explicabo molestiae eveniet beatae quasi reiciendis
         quia exercitationem incidunt eligendi minima voluptatem maxime fugiat laudantium natus earum, mollitia
         magni? Voluptatibus inventore error laudantium.</p>
-      </div>
-    </section>
+    </div>
+  </section>
 
-    <footer>
-        <!-- <h4>Socials</h4> -->
-        <ul>
-            <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
-            <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
-            <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
-            <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
-        </ul>
-        <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
-    </footer>
+  <footer>
+    <!-- <h4>Socials</h4> -->
+    <ul>
+      <li><a href="https://www.instagram.com/"><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+      <li><a href="https://twitter.com/"><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+      <li><a href="https://www.snapchat.com/"><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+      <li><a href="https://www.linkedin.com/"><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
+    </ul>
+    <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
+  </footer>
 </body>
+
 </html>
