--- a/join.html
+++ b/join.html
@@ -2,45 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join the Team - Sea Advocates</title>
-    <link rel="stylesheet" href="css/style.css"> 
-    <link rel="stylesheet" href="css/join.css"> 
-    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Join the Team - Sea Advocates</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/join.css">
+  <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
 <body>
   <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutUs.html">About Us</a></li>
-        <li><a href="project.html">Projects</a></li>
-        <li><a href="awards.html">Awards</a></li>
-        <li><a href="join.html">Join</a></li>
-      </ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="awards.html">Awards</a></li>
+      <li><a href="join.html">Join</a></li>
+    </ul>
   </nav>
 
   <h2>Join the Team</h2>
   <div class="form">
     <div class="heading">Provide your information</div>
     <form>
-    <label class="input-container"><span>Name</span><input type="text" class="info-input"/></label>
-    <label data-error="Invalid"><span>Email</span><input type="text" class="info-input"/></label>
-    <label data-error="Invalid"><span>Message</span><input id="message"></input></label>
-    <label><span> </span><input type="button" value="Submit" /></label>
+      <label class="input-container"><span>Name</span><input type="text" class="info-input" /></label>
+      <label data-error="Invalid"><span>Email</span><input type="text" class="info-input" /></label>
+      <label data-error="Invalid"><span>Message</span><input id="message"></label>
+      <label><span> </span><input type="button" value="Submit" /></label>
     </form>
   </div>
-  
-<footer>
+
+  <footer>
     <!-- <h4>Socials</h4> -->
     <ul>
-        <li><a><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
-        <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
-        <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
-        <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
+      <li><a href="https://www.instagram.com/"><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+      <li><a href="https://twitter.com/"><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+      <li><a href="https://www.snapchat.com/"><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+      <li><a href="https://www.linkedin.com/"><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
     </ul>
     <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
-</footer>
+  </footer>
 </body>
