--- a/project.html
+++ b/project.html
@@ -7,21 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Projects - Sea Advocates</title>
-    <link rel="stylesheet" href="css/style.css"> 
-    <link rel="stylesheet" href="css/project.css"> 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/project.css">
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
 </head>
 
 <body>
-  <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutUs.html">About Us</a></li>
-        <li><a href="project.html">Projects</a></li>
-        <li><a href="awards.html">Awards</a></li>
-        <li><a href="join.html">Join</a></li>
-      </ul>
-  </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="awards.html">Awards</a></li>
+            <li><a href="join.html">Join</a></li>
+        </ul>
+    </nav>
 
     <section class="projectsSections">
         <h2>Upcoming Projects</h2>
@@ -91,10 +91,10 @@
     </section>
     <footer>
         <ul>
-            <li><a href="https://www.instagram.com"><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
-            <li><a><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
-            <li><a><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
-            <li><a><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://www.instagram.com/"><img src="./images/icons/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://twitter.com/"><img src="./images/icons/twitter.png" alt="Twitter"></a></li>
+            <li><a href="https://www.snapchat.com/"><img src="./images/icons/snapchat.png" alt="Snapchat"></a></li>
+            <li><a href="https://www.linkedin.com/"><img src="./images/icons/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
         <div id="logo"><img src="./images/icons/logo.png" alt="Sea Advocates Brand Logo"></div>
     </footer>
